# Trip_Planner_from_scratch

./: .zshrc  LICENSE  README.md  agents.py  main.py  pyproject.toml  tasks.py
tools/: Calculator_tools.py  Search_tools.py  __init__.py
