[tool.poetry]
name = "trip-planner-from-scratch"
version = "0.1.0"
description = "Trip planner project"
authors = ["Magdolin Harmina <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyowm = "^3.3.0"
python-dotenv = "^1.0.0"
crewai = "^0.19.0"
openai = "^1.12.0"
langchain = "^0.1.0"
langchain-openai = "^0.0.5"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[build-system]
requires = ["poetry-core >=1.0.0"]
build-backend = "poetry.core.masonry.api"